# rune

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ESCALATION-wave-0-2026-03-13T11-29.md  LICENSE  MEMORY.md  README.md  ROADMAP.md  ROADMAP.md.txt  SECURITY.md  SOUL.md  SUPPORT.md  TOOLS.md  agent-orchestration-runbook.md  config.example.env  config.example.toml  docker-compose.yml  docker-compose.zero-config.yml  docker-entrypoint.sh  run.sh  rune-plan.md
.github/: CODE_OF_CONDUCT.md  labeler.yml  pull_request_template.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/gateway/: Cargo.toml
apps/gateway/src/: main.rs
assets/: hero.png.png:mshield
crates/rune-channels/: Cargo.toml
crates/rune-channels/src/: discord.rs  lib.rs  signal.rs  slack.rs  teams.rs  telegram.rs  types.rs  whatsapp.rs
crates/rune-channels/tests/: adapter_factory_tests.rs  channel_tests.rs
crates/rune-cli/: Cargo.toml
crates/rune-cli/src/: cli.rs  client.rs  doctor.rs  lib.rs  logs.rs  memory.rs  output.rs  service.rs
crates/rune-cli/templates/workspace/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
crates/rune-cli/templates/workspace/memory/: README.md
crates/rune-config/: Cargo.toml
crates/rune-config/src/: lib.rs
crates/rune-gateway/: Cargo.toml
crates/rune-gateway/src/: a2ui.rs  auth.rs  error.rs  events.rs  lib.rs  logging.rs  ms365.rs  pairing.rs  routes.rs  server.rs  state.rs  supervisor.rs  tool_execution_repo.rs  webchat.html  webchat.rs  ws.rs  ws_rpc.rs
crates/rune-gateway/tests/: route_tests.rs
crates/rune-mcp/: Cargo.toml
crates/rune-mcp/src/: discovery.rs  error.rs  lib.rs  memory_server.rs  protocol.rs  transport_http.rs  transport_stdio.rs
crates/rune-models/: Cargo.toml
crates/rune-models/src/: error.rs  lib.rs  types.rs
crates/rune-models/src/provider/: anthropic.rs  azure.rs  azure_foundry.rs  bedrock.rs  deepseek.rs  google.rs  groq.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  response.rs
crates/rune-models/tests/: ollama_routing_tests.rs  provider_tests.rs
crates/rune-runtime/: Cargo.toml
crates/rune-runtime/src/: agent_registry.rs  cancel_registry.rs  cancellation.rs  claude_plugin.rs  command_registry.rs  comms.rs  compaction.rs  context.rs  context_budget.rs  dispatcher.rs  engine.rs  error.rs  executor.rs  heartbeat.rs  hooks.rs  lane_queue.rs  lib.rs  mem0.rs  mem0_vault.rs  memory.rs  memory_bank.rs  merge_queue.rs  orchestrator.rs  plugin.rs  plugin_manager.rs  plugin_scanner.rs  project.rs  restart_continuity.rs  scheduler.rs  security_audit.rs  session_loop.rs  session_metadata.rs  skill.rs  skill_loader.rs  spell.rs  spell_loader.rs  tests.rs  usage.rs  workspace.rs
crates/rune-spells/code-review/: Cargo.toml  SPELL.md
crates/rune-spells/code-review/src/: lib.rs
crates/rune-spells/evolver/: Cargo.toml  SPELL.md
crates/rune-spells/evolver/src/: lib.rs
crates/rune-spells/rust-patterns/: Cargo.toml  SPELL.md
crates/rune-spells/rust-patterns/patterns/: anti_patterns.toml  async_tokio.toml  axum_web.toml  cli_clap.toml  concurrency.toml  database.toml  error_handling.toml  ownership.toml  pyo3.toml  wasm.toml
crates/rune-spells/rust-patterns/src/: lib.rs  tool.rs
crates/rune-spells/security-audit/: Cargo.toml  SPELL.md
crates/rune-spells/security-audit/src/: lib.rs
crates/rune-store/: Cargo.toml
crates/rune-store/migrations/00000000000000_initial/: down.sql  up.sql
crates/rune-store/migrations/2024-01-01-000000_create_tables/: down.sql  up.sql
crates/rune-store/migrations/2026-03-13-000001_add_session_metadata/: down.sql  up.sql
crates/rune-store/migrations/2026-03-14-000002_add_job_runs/: up.sql
crates/rune-store/migrations/2026-03-15-000004_add_paired_devices/: down.sql  up.sql
crates/rune-store/migrations/2026-03-16-000005_add_memory_embeddings/: down.sql  up.sql
crates/rune-store/migrations/2026-03-16-000006_unique_token_hash/: down.sql  up.sql
crates/rune-store/migrations/2026-03-18-000007_add_process_handles/: down.sql  up.sql
crates/rune-store/migrations/2026-03-18-000008_add_latest_turn_id_to_sessions/: down.sql  up.sql
crates/rune-store/migrations/2026-03-18-000009_add_scheduler_semantics/: down.sql  up.sql
crates/rune-store/migrations/2026-03-19-000010_add_durable_claims/: down.sql  up.sql
crates/rune-store/migrations/2026-03-21-000011_process_handle_audit_linkage/: down.sql  up.sql
crates/rune-store/migrations/2026-03-23-000012_session_profile_fields/: down.sql  up.sql
crates/rune-store/migrations/2026-03-27-000013_add_usage_cached_prompt_tokens/: down.sql  up.sql
crates/rune-store/migrations/2026-03-28-000014_memory_embeddings_project_namespace/: down.sql  up.sql
crates/rune-store/src/: database.rs  embedded.rs  error.rs  factory.rs  lib.rs  models.rs  pg.rs  pool.rs  repos.rs  schema.rs  turn_status.rs
crates/rune-store/src/cosmos/: approval.rs  device.rs  job.rs  job_run.rs  memory.rs  memory_fact.rs  mod.rs  process.rs  session.rs  tool_exec.rs  tool_policy.rs  transcript.rs  turn.rs
crates/rune-store/src/lancedb/: memory.rs  memory_fact.rs  mod.rs
crates/rune-store/src/sqlite/: memory_fact.rs  migrations.rs  mod.rs
crates/rune-store/tests/: contract_tests.rs  embedded_fallback.rs  factory_backend_matrix.rs  factory_sqlite_contract.rs  pg_device_pairing_integration.rs  pg_integration.rs  store_integration.rs
crates/rune-stt/: Cargo.toml
crates/rune-stt/src/: config.rs  error.rs  lib.rs  openai.rs
crates/rune-testkit/: Cargo.toml
crates/rune-testkit/src/: lib.rs
crates/rune-tools/: Cargo.toml
crates/rune-tools/src/: acp_tool.rs  approval.rs  builtins.rs  circuit_breaker.rs  comms_tool.rs  context_budget_tool.rs  cron_tool.rs  definition.rs  document_tools.rs  error.rs  exec_tool.rs  executor.rs  file_tools.rs  gateway_tool.rs  git_tool.rs  image_generation_tool.rs  lib.rs  memory_index.rs  memory_ranking.rs  memory_tool.rs  message_tool.rs  process_audit.rs  process_tool.rs  registry.rs  session_tool.rs  spawn_tool.rs  stubs.rs  subagent_tool.rs  tests.rs  web_fetch_tool.rs
docs/: INDEX.md  (+17 more)
(+224 files in other folders)
