[workspace]
resolver = "2"
members = [
  "crates/rune-core",
  "crates/rune-config",
  "crates/rune-store",
  "crates/rune-runtime",
  "crates/rune-tools",
  "crates/rune-models",
  "crates/rune-channels",
  "crates/rune-gateway",
  "crates/rune-tts",
  "crates/rune-stt",
  "crates/rune-cli",
  "crates/rune-mcp",
  "crates/rune-browser",
  "crates/rune-testkit",
  "apps/gateway",
  "apps/cli",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
figment = { version = "0.10", features = ["env", "toml"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "env"] }
cron = "0.15"
diesel = { version = "2", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.6", features = ["postgres", "deadpool"] }
diesel_migrations = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }
postgresql_embedded = "0.20"
wiremock = "0.6"
tempfile = "3"
toml_edit = "0.22"
