[package]
name = "rune-gateway-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rune-gateway"
path = "src/main.rs"

[dependencies]
rune-channels = { path = "../../crates/rune-channels" }
rune-browser = { path = "../../crates/rune-browser" }
rune-config = { path = "../../crates/rune-config" }
rune-core = { path = "../../crates/rune-core" }
rune-gateway = { path = "../../crates/rune-gateway" }
rune-models = { path = "../../crates/rune-models" }
rune-mcp = { path = "../../crates/rune-mcp" }
rune-runtime = { path = "../../crates/rune-runtime" }
rune-store = { path = "../../crates/rune-store" }
rune-tools = { path = "../../crates/rune-tools" }

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
