[package]
name = "rune-gateway-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rune-gateway"
path = "src/main.rs"

[dependencies]
rune-channels = { path = "../../crates/rune-channels" }
rune-browser = { path = "../../crates/rune-browser" }
rune-config = { path = "../../crates/rune-config" }
rune-core = { path = "../../crates/rune-core" }
rune-gateway = { path = "../../crates/rune-gateway" }
rune-models = { path = "../../crates/rune-models" }
rune-mcp = { path = "../../crates/rune-mcp" }
rune-runtime = { path = "../../crates/rune-runtime" }
rune-stt = { path = "../../crates/rune-stt" }
rune-store = { path = "../../crates/rune-store" }
rune-tools = { path = "../../crates/rune-tools" }
rune-spells-security-audit = { path = "../../crates/rune-spells/security-audit" }
rune-spells-rust-patterns = { path = "../../crates/rune-spells/rust-patterns" }

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
