[package]
name = "rune-channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
hmac = "0.12"
reqwest = { workspace = true, features = ["json", "multipart"] }
rune-config = { path = "../rune-config" }
rune-core = { path = "../rune-core" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
urlencoding = "2"

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = "0.6"
