[package]
name = "rune-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rune-core = { path = "../rune-core" }
rune-config = { path = "../rune-config" }
rune-mcp = { path = "../rune-mcp" }
rune-runtime = { path = "../rune-runtime" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete = "4"
dirs = "6"
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tokio.workspace = true
toml.workspace = true
urlencoding = "2"
toml_edit.workspace = true
tempfile.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock.workspace = true
