[package]
name = "rune-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rune-core = { path = "../rune-core" }
rune-config = { path = "../rune-config" }
rune-store = { path = "../rune-store" }
rune-runtime = { path = "../rune-runtime" }
rune-models = { path = "../rune-models" }
rune-tools = { path = "../rune-tools" }

async-trait.workspace = true
axum = { workspace = true, features = ["ws"] }
http-body-util = "0.1"
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
