[package]
name = "rune-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rune-core = { path = "../rune-core" }
rune-config = { path = "../rune-config" }
rune-store = { path = "../rune-store" }
rune-runtime = { path = "../rune-runtime" }
rune-models = { path = "../rune-models" }
rune-tools = { path = "../rune-tools" }
rune-tts = { path = "../rune-tts" }
rune-stt = { path = "../rune-stt" }
rune-channels = { path = "../rune-channels" }

async-trait.workspace = true
axum = { workspace = true, features = ["ws", "multipart"] }
ed25519-dalek.workspace = true
hex.workspace = true
http-body-util = "0.1"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
urlencoding = "2"
include_dir = "0.7"
sha2 = "0.10"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.28"
