[package]
name = "rune-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rune-channels = { path = "../rune-channels" }
rune-core = { path = "../rune-core" }
rune-config = { path = "../rune-config" }
rune-store = { path = "../rune-store" }
rune-models = { path = "../rune-models" }
rune-stt = { path = "../rune-stt" }
rune-tools = { path = "../rune-tools" }
async-trait.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
native-tls = "0.2"
postgres-native-tls = "0.5"
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
