[package]
name = "rune-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rune-channels = { path = "../rune-channels" }
rune-core = { path = "../rune-core" }
rune-config = { path = "../rune-config" }
rune-store = { path = "../rune-store" }
rune-models = { path = "../rune-models" }
rune-stt = { path = "../rune-stt" }
rune-tools = { path = "../rune-tools" }
async-trait.workspace = true
dirs = "6"
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
