[package]
name = "rune-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rune-core = { path = "../rune-core" }
rune-config = { path = "../rune-config" }
async-trait.workspace = true
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async = { workspace = true, features = ["postgres", "deadpool"] }
diesel_migrations.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
diesel-async = { workspace = true, features = ["postgres", "deadpool"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
