[package]
name = "rune-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["postgres", "sqlite", "cosmos", "lancedb"]
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:postgres-native-tls", "dep:native-tls", "dep:postgresql_embedded"]
sqlite = ["dep:rusqlite", "dep:tokio-rusqlite"]
cosmos = ["dep:azure_data_cosmos", "dep:azure_core", "dep:futures", "dep:reqwest", "dep:hmac", "dep:sha2", "dep:base64"]
lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]

[dependencies]
rune-core = { path = "../rune-core" }
rune-config = { path = "../rune-config" }
async-trait.workspace = true
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"], optional = true }
deadpool-postgres = { version = "0.14", optional = true }
postgres-native-tls = { version = "0.5", optional = true }
native-tls = { version = "0.2", optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
postgresql_embedded = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
tokio-rusqlite = { workspace = true, optional = true }
azure_data_cosmos = { workspace = true, optional = true }
azure_core = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
lancedb = { version = "0.16", optional = true }
arrow-array = { version = "54", optional = true }
arrow-schema = { version = "54", optional = true }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
