[package]
name = "rune-stt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
