[package]
name = "rune-spells-evolver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
rune-core = { path = "../../rune-core" }
rune-tools = { path = "../../rune-tools" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
