[package]
name = "rune-spells-rust-patterns"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
rune-core = { path = "../../rune-core" }
rune-tools = { path = "../../rune-tools" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
